Fix overflow x horizontal en version mobile

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,14 @@ html {
 	font-family: "Outfit", sans-serif;
 	background-color: var(--color-bg);
 	color: var(--color-text);
+	overflow-x: hidden;
+	width: 100%;
+}
+
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
 }
 
 h1,
@@ -144,6 +152,7 @@ h1 {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	width: 100%;
 }
 
 .content h2 {
